# stm32-rpi-data-bridge

./: .gitignore  README.md
Inc/: bme280_defs.h  frame.h  hw.h  i2c.h  main.h
Src/: bme280.c  frame.c  hw.c  i2c.c  main.c
rpi_gateway/: .gitignore.txt  CMakeLists.txt
rpi_gateway/include/: crc16.hpp  serial.hpp
rpi_gateway/src/: crc16.cpp  main.cpp  serial.cpp
